--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,26 @@
 	<description>Maven Standalone Application</description>
 
 	<properties>
-		<sonar.host.url>http://35.154.242.68:9000/</sonar.host.url>
+		<sonar.host.url>http://13.233.65.78:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password>
+		<sonar.password>passw0rd</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+        <distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>Wallmart Release Repository </name>
+	      <url>http://13.232.38.237:8081/repository/wallamrt-release/</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Wallmart Snapshot Repository </name>
+	      <url>http://13.232.38.237:8081/repository/wallmart-snapshot/</url>
+	    </snapshotRepository>
+	    
+</distributionManagement>
 	<dependencies>
 
 		<dependency>
